# QuantEngine

./: .gitignore  CMakeLists.txt  readme.md
include/: BackEngine.h  CSVLoader.h  DataGenerator.h  MovingAverage.h  Order.h  PerformanceAnalyzer.h  Portfolio.h  Position.h  Strategy.h  Trade.h
include/analytics/: PerformanceAnalyzer.h
include/core/: Order.h  Portfolio.h  Position.h  Trade.h
include/data/: CSVLoader.h  DataGenerator.h
include/engine/: BackEngine.h  BacktestConfig.h  ParameterSweep.h
include/strategy/: MovingAverage.h  Strategy.h
src/: BackEngine.cpp  CSVLoader.cpp  DataGenerator.cpp  MovingAverage.cpp  Order.cpp  PerformanceAnalyzer.cpp  Portfolio.cpp  Position.cpp  Trade.cpp  main.cpp
src/analytics/: PerformanceAnalyzer.cpp
src/core/: Order.cpp  Portfolio.cpp  Position.cpp  Trade.cpp
src/data/: CSVLoader.cpp  DataGenerator.cpp
src/engine/: BackEngine.cpp  ParameterSweep.cpp
src/strategy/: MovingAverage.cpp
